syntax = "proto3";

package com.microservices.grpc;

option java_multiple_files = true;
option java_package = "com.microservices.grpc";

service FileStorageService {
  rpc getFile(RequestId) returns (File) {}
  rpc createFile(CreateOrSaveFileRequest) returns (File) {}
  rpc updateFile(File) returns (File) {}
}

message File {
  int32 id = 1;
  string name = 2;
  string dob = 3;
  double salary = 4;
  int32 age = 5;
}

message CreateOrSaveFileRequest {
  File file = 1;
  string fileType = 2;
}

message RequestId {
  int32 id = 1;
}

message ErrorDetail {
  // Error code
  string errorCode = 1;
  //Error message
  string message = 2;
  // Additional metadata associated with the Error
  map<string, string> metadata = 3;
}